# kubevirt-pysdk

./: README.rst  requirements.txt  setup.cfg  tox.ini
kubevirt/: __init__.py  client.py  errors.py
