[metadata]
name=kubevirt
author=Lukas Bednar
author_email=lukyn17@gmail.com
summary=KubeVirt Python SDK
description-file=README.rst
license=Apache2
home-page=http://github.com/lukas-bednar/kubevirt-pysdk
keywords=
    kubevirt
classifier=
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.4
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Topic :: Utilities
[files]
packages=
    kubevirt
[bdist_wheel]
universal = 1
[sdist]
formats = zip
